--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: get-github-theme
+theme: jekyll-theme-minimal
 title: Gadgelectronit Enterprise (GET) on Github!
 description: Bookmark this to keep an eye on my project updates!
